crates/apollo-compiler/test_data/diagnostics/0040_operation_with_undefined_fields_on_reference_type.txt
Error: type `Query` does not have a field `size`
   ╭─[0040_operation_with_undefined_fields_on_reference_type.graphql:2:3]
   │
 2 │   size
   │   ──┬─  
   │     ╰─── field `size` selected here
   │ 
 6 │ type Query {
   │      ──┬──  
   │        ╰──── type `Query` defined here
   │ 
   │ Note: path to the field: `query getProduct → size`
───╯
Error: type `Query` does not have a field `weight`
   ╭─[0040_operation_with_undefined_fields_on_reference_type.graphql:3:3]
   │
 3 │   weight
   │   ───┬──  
   │      ╰──── field `weight` selected here
   │ 
 6 │ type Query {
   │      ──┬──  
   │        ╰──── type `Query` defined here
   │ 
   │ Note: path to the field: `query getProduct → weight`
───╯

